# woow_odoo_mcp_server

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_zh-TW.md  docker-compose.yml  k8s-deploy.yaml  k8s-rbac.yaml  pyproject.toml
docs/: architecture.md
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: Sidebar.jsx  StatusCard.jsx
frontend/src/pages/: ConnectionConfig.jsx  Dashboard.jsx  LogViewer.jsx  LoginPage.jsx  PermissionEditor.jsx  SettingsPage.jsx  TokenManager.jsx  ToolManager.jsx
mcp_admin_core/: __init__.py  app.py  mcp_sse_wrapper.py  process.py  proxy.py
mcp_admin_core/auth/: __init__.py  middleware.py
mcp_admin_core/config/: __init__.py  store.py
mcp_admin_core/k8s/: __init__.py  client.py
mcp_admin_core/routers/: __init__.py  settings.py
odoo_mcp_admin/: __init__.py  main.py  tool_registry.py
odoo_mcp_admin/routers/: __init__.py  config.py  health.py  logs.py  tokens.py  tools.py
patches/: fix_cross_session_token_store.py
